src/SiteBundle/Resources/public/css/style.css
/* ... */
/* BG Image */

.image-bg{
	width: 100%;
	display: block;
	position: relative;
	overflow: hidden;
	background-attachment: static;
	background-repeat: no-repeat;
	background-position: center center;
	-webkit-background-size: cover;
	-moz-background-size: cover;
	-o-background-size: cover;
	background-size: cover;
	-webkit-box-sizing: border-box;
	-moz-box-sizing: border-box;
	box-sizing: border-box;
	min-height: 560px;
}
.image-bg.static{
	background-attachment: static;
}
.image-bg.fixed{
	background-attachment: fixed;
}
.image-bg.content-in{
	background-repeat: no-repeat;
	background-position: center top;
	-webkit-background-size: cover;
	background-size: cover;
	bottom: 0;
	left: 0;
	overflow: hidden;
	position: absolute;
	right: 0;
	text-align: center;
	top: 0;
	z-index: 0;
	min-height:unset;

}

/* Overlay */
.overlay {
	background:#000;
	height: 100%;
	position:absolute;
	top:0;
	left:0;
	right:0;
	opacity: 0.4;
	width: 100%;
}
.image-bg .overlay {
	background: #000;
	height: 100%;
	opacity: .2;
	filter: alpha(opacity=20);
	width: 100%;
}
.image-bg .overlay-white {
	background: #fff;
	height: 100%;
	opacity: .8;
	filter: alpha(opacity=80);
	width: 100%;
}
.image-bg .overlay-half-dark {
	background: #000;
	height: 100%;
	opacity: .5;
	filter: alpha(opacity=20);
	width: 100%;
}
.image-bg .overlay-dark {
	background: #000;
	height: 100%;
	opacity: .7;
	filter: alpha(opacity=20);
	width: 100%;
}
.image-bg .overlay-strips{
	background:url(/bundles/site/images/pattern.png) repeat;
	height: 100%;
	opacity: .8;
	filter: alpha(opacity=20);
	width: 100%;
}
.image-bg .overlay-boxed {
	background:url(/bundles/site/images/pattern2.png) repeat;
	height: 100%;
	opacity: .1;
	filter: alpha(opacity=20);
	width: 100%;
}

/* Forms */
.form-box{
	background-color:#f7f7f7;
	padding:30px;
}
.form-control{
	margin-bottom:20px;
}
textarea.form-control.height-82{
	height:82px;
}
.field-border-bottom .form-control{
	border-left: medium none;
	border-radius: 0;
	border-right: medium none;
	border-top: medium none;
	box-shadow: none;
	background:transparent;
	color:#ffffff;
}
.field-border .form-control{
	box-shadow: none;
	background:transparent;
	color:#ffffff;
}
.form-message1{
	color:#ff0000;
}
/* Text Color */
.white{
	color:#ffffff;
}
.white a:not(.btn){
	color:#ffffff;
}
.black{
	color:#000000;
}

/* BG Color */

.light-bg{
	background: #f7f7f7;
}
.white-bg{
	background: #ffffff;
}
.black-bg{
	background: #171717;
}
.border-tb{
	border-bottom: 1px solid #f2f2f2;
	border-top: 1px solid #f2f2f2;
}

/* Transition Effects */

.item-box:hover i{
	transition: all 0.27s cubic-bezier(0, 0, 0.58, 1) 0s;
}

/* Image */
img {
	height: auto;
	max-width: 100%;
}
img.pull-right{
	padding:0 0 15px 15px;
}
img.pull-left{
	padding:15px 15px 0 0;
}
html.opacity img{
	padding-bottom:0;
}
body .opacity img{
	padding-bottom:10px;
}
html.opacity:hover img{
	opacity:1;
}
body .opacity:hover img{
	opacity:.8;
}
.img-center{
	margin-left:auto;
	margin-right:auto;
}
/* Double Image */

.double-img {
	position:relative;
}
.image-right {
	margin-left:-25%;
	position:relative;
}

/*  Gary Scale Image */

.grayscale img{
	filter: url("data:image/svg+xml;utf8,<svg xmlns=\'http://www.w3.org/2000/svg\'><filter id=\'grayscale\'><feColorMatrix type=\'matrix\' values=\'0.3333 0.3333 0.3333 0 0 0.3333 0.3333 0.3333 0 0 0.3333 0.3333 0.3333 0 0 0 0 0 1 0\'/></filter></svg>#grayscale"); /* Firefox 10+, Firefox on Android */
	filter: gray;
	-webkit-filter: grayscale(100%);
}
.grayscale  img:hover{
	filter: url("data:image/svg+xml;utf8,<svg xmlns=\'http://www.w3.org/2000/svg\'><filter id=\'grayscale\'><feColorMatrix type=\'matrix\' values=\'1 0 0 0 0, 0 1 0 0 0, 0 0 1 0 0, 0 0 0 1 0\'/></filter></svg>#grayscale");
	-webkit-filter: grayscale(0%);
}
/******************************************************************************
  Hover Effects
*******************************************************************************/
.pricing:hover .title a,
.process-content:hover .title,
.portfolio-grid .grids:hover img,
.btn:hover,
.icons-hover-color:hover i,
.get-a-quote:hover a,
.get-a-quote a,
.link-hover-black a:hover,
.icons-hover-black i:hover,
.link-hover-black a,
.icons-hover-black i,
i:hover,
i,
.timeliner li:hover .timeline-heading h4.subheading,
.timeliner li .timeline-heading h4.subheading,
.timeliner li:hover .timeline-image,
.timeliner li .timeline-image,
.opacity:hover img,
.opacity img,
.submit,
.submit:hover,
.icon-6 span,
.icon-6 span:hover,
.blog.timeliner>li:hover .timeline-image,
.blog.timeliner>li:hover .timeline-icon{
	transition:all 350ms ease-in-out 0s;
	-moz-transition:all 350ms ease-in-out 0s;
	-webkit-transition:all 350ms ease-in-out 0s;
	-o-transition:all 350ms ease-in-out 0s;
	-ms-transition:all 350ms ease-in-out 0s;
}
/* Hover Zoom Effects */
.zoom:hover i{
	transform:scale(1.1);
	-moz-transform:scale(1.1);
	-webkit-transform:scale(1.1);
	-o-transform:scale(1.1);
	-ms-transform: scale(1.1);
}
/* Hover Rotate Effects */
.rotate:hover i{
	transform:rotate(360deg);
	-ms-transform:rotate(360deg);
	-webkit-transform:rotate(360deg);
}
/* Endless Rotating */
@-webkit-keyframes rotating /* Safari and Chrome */ {
	from {
		-ms-transform: rotate(0deg);
		-moz-transform: rotate(0deg);
		-webkit-transform: rotate(0deg);
		-o-transform: rotate(0deg);
		transform: rotate(0deg);
	}
	to {
		-ms-transform: rotate(360deg);
		-moz-transform: rotate(360deg);
		-webkit-transform: rotate(360deg);
		-o-transform: rotate(360deg);
		transform: rotate(360deg);
	}
}
@keyframes rotating {
	from {
		-ms-transform: rotate(0deg);
		-moz-transform: rotate(0deg);
		-webkit-transform: rotate(0deg);
		-o-transform: rotate(0deg);
		transform: rotate(0deg);
	}
	to {
		-ms-transform: rotate(360deg);
		-moz-transform: rotate(360deg);
		-webkit-transform: rotate(360deg);
		-o-transform: rotate(360deg);
		transform: rotate(360deg);
	}
}
/* ... */

